[project]
name = ""
version = ""
description = ""
authors = [
    {name = "CleoStoat", email = "89475523+CleoStoat@users.noreply.github.com"},
]
dependencies = ["python-telegram-bot", "sqlalchemy", "python-dotenv"]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"


[tool]
[tool.pdm]
allow_prereleases = true

[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = [
    "black",
]
